# slick_queue

./: .gitignore  CHANGELOG  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
cmake/: slick-queueConfig.cmake.in  slick_queueConfig.cmake.in
include/: slick_queue.h
include/slick/: queue.h
include/slick_queue/: slick_queue.h
tests/: CMakeLists.txt  shm_tests.cpp  tests.cpp
